2025-02-27  Giselle Johnson <gigiischic@gmail.com>
    Updated User messages
    Updated Arrows
    Updated cave by adding new rooms

2025-02-27  James Kang <james.y.kang@uscga.edu>
    updated arrow travel distance

2025-02-27 Cassandra Moshy <cassiemoshy@gmail.com>
    Updated Arrows
    Modified Arrows

2025-02-27 Nathan Harris <nathan.p.harris@uscga.edu>
    Modified creature threats
    Added teleport

2025-03-31 Giselle Johnson <gigiischic@gmail.com>
    Link to the SQL database download: https://sqlitebrowser.org/dl/

2025-03-31 Giselle Johnson <gigiischic@gmail.com>
    added the calendar.py, main.py, to_do.py, and priority.py
    Added to the main creating the skeleton
    Worked on adding database through DBbrowser
    Updated format

2025-03-31 Team
    Deliberated on design of the GUI
    Planned for upcoming tasks
    Assigned tasks for team
    Planned next meeting Thursday 1900

2025-03-31 Giselle Johnson <gigiischic@gmail.com>
    Did test to figure out method calling across .py files
    Testing worked
    Wrote example comments into code for easy reference

2025-04-01 Giselle Johnson <gigiischic@gmail.com>
    Update the tkinter
    Added the add portion to add task or event
    Incorporated database
    Currently the add functions all work as intended
    updated the GUI to include the buttons and fields for add
