@@ -40,4 +40,5 @@
     Incorporated database
     Currently the add functions all work as intended
     updated the GUI to include the buttons and fields for add
+    Added a sources file
 
